Fixed padding problem on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,7 @@ a:hover {
  max-width:350px;
  text-align:center;
  margin:0 auto;
- padding:2em 1em 1em 1em;
+ padding:2em 0em 1em 0em;
 }
 .sponsorName {
  font-size:1.5em;
